...

    <!--  Ad units  -->
    <string name="compose_examples_title">Jetpack Compose Examples</string>
    <string name="playable_title">Playable</string>
    <string name="sticky_banner_title">Sticky banner</string>
    <string name="inline_banner_title">Inline banner</string>
    <string name="interstitial_title">Interstitial</string>
    <string name="rewarded_title">Rewarded</string>
    <string name="appopenad_title">AppOpenAd</string>
    <string name="native_template_title">Native template</string>
    <string name="native_custom_title">Custom native</string>
    <string name="adfox_carousel_title">Adfox Carousel</string>
    <string name="instream_simple_title">Simple instream</string>
...
